--- a/templates/aliwood/pages/data/data.html
+++ b/templates/aliwood/pages/data/data.html
@@ -147,17 +147,17 @@
   // 选中的视频id
   var videoId = '';
   // 切换标签
-  $('.filter-item').click(function () {
-    $(this).parent().children().each(function () {
-      $(this).removeClass('active');
-    });
-    $(this).parent().siblings().each(function () {
-      $(this).children().each(function () {
-        $(this).removeClass('active');
-      });
-    });
-    $(this).addClass('active');
-  });
+  // $('.filter-item').click(function () {
+  //   $(this).parent().children().each(function () {
+  //     $(this).removeClass('active');
+  //   });
+  //   $(this).parent().siblings().each(function () {
+  //     $(this).children().each(function () {
+  //       $(this).removeClass('active');
+  //     });
+  //   });
+  //   $(this).addClass('active');
+  // });
 
   // 初始化过滤器
   initFilter();
