--- a/templates/aliwood/pages/data/detail.html
+++ b/templates/aliwood/pages/data/detail.html
@@ -10,7 +10,7 @@
 {% endblock js %}
 
 {% block contents %}
-<div class="content dark full-screen">
+<div class="content dark full-screen detail">
   <div class="detail-wrapper">
     <div class="back-btn flexCenter">
       <a href="../data" class="flexCenter"><span class="glyphicon glyphicon-menu-left"></span></a>
@@ -73,56 +73,56 @@
     </div>
     <div class="param-curve-wrapper">
       <div class="curve-tags">
-        <div class="curve-tag-item active"><span>画面景别</span></div>
-        <div class="curve-tag-item"><span>画面运动强度</span></div>
-        <div class="curve-tag-item"><span>画面色调</span></div>
-        <div class="curve-tag-item"><span>主体位置</span></div>
-        <div class="curve-tag-item"><span>主体运动强度</span></div>
-        <div class="curve-tag-item"><span>主体情绪</span></div>
-        <div class="curve-tag-item"><span>整体</span></div>
+        <div class="curve-tag-item active" id="shotSize">画面景别</div>
+        <div class="curve-tag-item" id="picMotion">画面运动强度</div>
+        <div class="curve-tag-item" id="color">画面色调</div>
+        <div class="curve-tag-item" id="position">主体位置</div>
+        <div class="curve-tag-item" id="mainMotion">主体运动强度</div>
+        <div class="curve-tag-item" id="emotion">主体情绪</div>
+        <div class="curve-tag-item" id="totalArg">整体</div>
       </div>
       <div class="stacked-area-chart" id="stacked-area-chart"></div>
-      <!-- <div class="curve-params-wrapper">
+      <div class="curve-params-wrapper single-param">
         <div class="curve-params-title">画面景别</div>
-        <div class="curve-param-item">
+        <div class="curve-param-item" id="firstShot">
           <div class="curve-param-subtitle">首镜头</div>
           <div class="curve-param-detail">中景</div>
         </div>
-        <div class="curve-param-item">
+        <div class="curve-param-item" id="total">
           <div class="curve-param-subtitle">整体变化</div>
           <div class="curve-param-detail">大</div>
         </div>
-        <div class="curve-param-item">
+        <div class="curve-param-item" id="endShot">
           <div class="curve-param-subtitle">尾镜头</div>
           <div class="curve-param-detail">近景</div>
         </div>
-      </div> -->
+      </div>
       <div class="curve-params-wrapper all-params">
         <div class="curve-params-title">视频整体变化特征</div>
         <div class="curve-param-item-group">
           <div class="curve-param-item">
             <div class="curve-param-subtitle">画面景别变化</div>
-            <div class="curve-param-detail param-bg-scene-type">大</div>
+            <div class="curve-param-detail" style="background: #F1B06F;">大</div>
           </div>
           <div class="curve-param-item">
             <div class="curve-param-subtitle">主体位置变化</div>
-            <div class="curve-param-detail param-bg-main-position">小</div>
+            <div class="curve-param-detail" style="background: #B47F7F;">小</div>
           </div>
           <div class="curve-param-item">
             <div class="curve-param-subtitle">画面运动变化</div>
-            <div class="curve-param-detail param-bg-scene-sport">小</div>
+            <div class="curve-param-detail" style="background: #A1A1AC;">小</div>
           </div>
           <div class="curve-param-item">
             <div class="curve-param-subtitle">主体位置变化</div>
-            <div class="curve-param-detail param-bg-scene-sport">大</div>
+            <div class="curve-param-detail" style="background: #6DA49E;">大</div>
           </div>
           <div class="curve-param-item">
             <div class="curve-param-subtitle">画面色调变化</div>
-            <div class="curve-param-detail param-bg-scene-color">小</div>
+            <div class="curve-param-detail" style="background: #6984B1;">小</div>
           </div>
           <div class="curve-param-item">
             <div class="curve-param-subtitle">主体情绪变化</div>
-            <div class="curve-param-detail param-bg-main-mood">大</div>
+            <div class="curve-param-detail" style="background: #7B6A9A;">大</div>
           </div>
         </div>
       </div>
@@ -145,37 +145,37 @@
     cram_num:12,
     clip_arvTime:1.5,
     shotSize:{
-      'shotsizeData': '[{"xAxis": 6, "yAxis": 0}, {"xAxis": 6, "yAxis": 3}, {"xAxis": 12, "yAxis": 0}, {"xAxis": 12, "yAxis": 3}, {"xAxis": 18, "yAxis": 0}, {"xAxis": 18, "yAxis": 3}]',
+      'data': [[6, 1], [6, 3], [12, 2], [12, 4], [18, 2], [18,3]],
       'firstShot':'中景',
       'total':'大',
       'endShot':'近景',
    },
     picMotion:{
-   		'picMotionData': '[{"xAxis": 6, "yAxis": 0}, {"xAxis": 6, "yAxis": 3}, {"xAxis": 12, "yAxis": 0}, {"xAxis": 12, "yAxis": 3}, {"xAxis": 18, "yAxis": 0}, {"xAxis": 18, "yAxis": 3}]', 
-   		'firstShot':'中景',
-   		'total':'大',
+   		'data': [[6,2], [ 6, 4], [12, 1], [12, 2], [18,3], [18,4]], 
+   		'firstShot':'远景',
+   		'total':'小',
    		'endShot':'近景',
    },
     color:{
-   		'colorData': '[{"xAxis": 6, "yAxis": 0}, {"xAxis": 6, "yAxis": 3}, {"xAxis": 12, "yAxis": 0}, {"xAxis": 12, "yAxis": 3}, {"xAxis": 18, "yAxis": 0}, {"xAxis": 18, "yAxis": 3}]', 
+   		'data': [[6,0], [6, 1], [12,0], [12,2], [18, 0], [18, 3]], 
    		'firstShot':'中景',
    		'total':'大',
    		'endShot':'近景',
    },
     position:{
-   		'positionData': '[{"xAxis": 6, "yAxis": 0}, {"xAxis": 6, "yAxis": 3}, {"xAxis": 12, "yAxis": 0}, {"xAxis": 12, "yAxis": 3}, {"xAxis": 18, "yAxis": 0}, {"xAxis": 18, "yAxis": 3}]', 
+   		'data': [[6,1], [6,3], [12, 2], [12,3], [18, 2], [18,3]], 
    		'firstShot':'中景',
    		'total':'大',
    		'endShot':'近景',
    },
     mainMotion:{
-   		'mainMotionData': '{"xAxis": 6, "yAxis": 0}, {"xAxis": 6, "yAxis": 3}, {"xAxis": 12, "yAxis": 0}, {"xAxis": 12, "yAxis": 3}, {"xAxis": 18, "yAxis": 0}, {"xAxis": 18, "yAxis": 3}]', 
+   		'data': [[6,0], [6,2], [12,0], [12,4], [18,1], [18,3]],
    		'firstShot':'中景',
    		'total':'大',
    		'endShot':'近景',
    },
     emotion:{
-   		'emotion': '[{"xAxis": 6, "yAxis": 0}, {"xAxis": 6, "yAxis": 3}, {"xAxis": 12, "yAxis": 0}, {"xAxis": 12, "yAxis": 3}, {"xAxis": 18, "yAxis": 0}, {"xAxis": 18, "yAxis": 3}]', 
+   		'data': [[6, 2], [6, 3], [12, 2], [12,3], [18,1], [18,3]],
    		'firstShot':'中景',
    		'total':'大',
    		'endShot':'近景',
@@ -189,8 +189,17 @@
    		emotionArg:'大',
    }
   };
-  // 基于准备好的dom，初始化echarts实例
-  var myChart = echarts.init(document.getElementById('stacked-area-chart'));
+  // 图类型映射
+  var mapType2Feat = {
+    shotSize: {name: '画面景别', color: '#F1B06F'},
+    picMotion: {name:'画面运动强度', color: '#B47F7F'},
+    color: {name:'画面色调', color: '#A1A1AC'},
+    position: {name:'主体位置',color: '#6DA49E'},
+    mainMotion: {name:'主体运动强度',color: '#6984B1'},
+    emotion: {name:'主体情绪',color:'#7B6A9A'}
+  }
+  // 图类型
+  var type = "shotSize";  // 画面景别
 
   // 加载dplayer
   var dp = new DPlayer({
@@ -198,31 +207,25 @@
     video: {url: context.video_Url}
   });
 
+  // 基于准备好的dom，初始化echarts实例
+  var myChart = echarts.init(document.getElementById('stacked-area-chart'));
+
   var option = {
     tooltip: {
       trigger: 'axis',
-      axisPointer: {
-        type: 'cross',
-        label: {
-          backgroundColor: '#6a7985'
-        }
-      }
+    },
+    grid: {
+        left: '3%',
+        right: '4%',
+        bottom: '9%',
+        containLabel: true
     },
     legend: {
       data: ['画面景别', '画面运动强度', '画面色调', '主体位置', '主体运动强度', '主体情绪']
     },
-    grid: {
-      left: '3%',
-      right: '4%',
-      bottom: '3%',
-      containLabel: true
-    },
     xAxis: [{
-      type: 'category',
+      type: 'value',
       boundaryGap: false,
-      data: ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12', '13', '14', '15', '16', '17', '18',
-        '19', '20', '21', '22', '23', '24'
-      ]
     }],
     yAxis: [{
       type: 'value'
@@ -232,64 +235,25 @@
         type: 'line',
         stack: '总量',
         areaStyle: {},
-        data: [120, 132, 101, 134, 90, 230, 210, 120, 132, 101, 134, 90, 230, 210, 120, 132, 101, 134, 90, 230, 210]
-      },
-      {
-        name: '画面运动强度',
-        type: 'line',
-        stack: '总量',
-        areaStyle: {},
-        data: [220, 182, 191, 234, 290, 330, 310, 220, 182, 191, 234, 290, 330, 310, 220, 182, 191, 234, 290, 330,
-          310, 290, 330, 310
-        ]
-      },
-      {
-        name: '画面色调',
-        type: 'line',
-        stack: '总量',
-        areaStyle: {},
-        data: [150, 232, 201, 154, 190, 330, 410, 150, 232, 201, 154, 190, 330, 410, 150, 232, 201, 154, 190, 330,
-          410, 190, 330, 410
-        ]
-      },
-      {
-        name: '主体位置',
-        type: 'line',
-        stack: '总量',
-        areaStyle: {
-          normal: {}
+        data: context.shotSize.data,
+        lineStyle: {
+          color: '#F1B06F',
+          width: 1
         },
-        data: [320, 332, 301, 334, 390, 330, 320, 320, 332, 301, 334, 390, 330, 320, 320, 332, 301, 334, 390, 330,
-          320, 390, 330, 320
-        ]
-      },
-      {
-        name: '主体运动强度',
-        type: 'line',
-        stack: '总量',
-        label: {
-          normal: {
-            show: true,
-            position: 'top'
+        areaStyle: {
+          color: {
+            type: 'linear',
+            x: 0,
+            y: 0,
+            x2: 0,
+            y2: 1,
+            colorStops: [{
+                offset: 0, color: '#F1B06F' // 0% 处的颜色
+            }, {
+                offset: 1, color: '#fff' // 100% 处的颜色
+            }],
           }
         },
-        areaStyle: {
-          normal: {}
-        },
-        data: [820, 932, 901, 934, 1290, 1330, 1320, 820, 932, 901, 934, 1290, 1330, 1320, 820, 932, 901, 934, 1290,
-          1330, 1320, 1290, 1330, 1320
-        ]
-      },
-      {
-        name: '主体情绪',
-        type: 'line',
-        stack: '总量',
-        areaStyle: {
-          normal: {}
-        },
-        data: [320, 332, 301, 334, 390, 330, 320, 320, 332, 301, 334, 390, 330, 320, 320, 332, 301, 334, 390, 330,
-          320, 390, 330, 320
-        ]
       },
     ]
   };
@@ -301,6 +265,73 @@
   $('.curve-tag-item').click(function () {
     $('.curve-tag-item').removeClass('active');
     $(this).addClass('active');
+    type = $(this).attr('id');
+    // 重新渲染
+    if (type === 'totalArg') {
+      var types = Object.keys(mapType2Feat);
+      var series = [];
+      types.forEach(function(type) {
+        series.push({
+          name: mapType2Feat[type].name,
+          type: 'line',
+          stack: '总量',
+          areaStyle: {},
+          data: context[type].data,
+          lineStyle: {
+              color: mapType2Feat[type].color,
+              width: 1
+          },
+          areaStyle: {
+            color: {
+              type: 'linear',
+              x: 0,
+              y: 0,
+              x2: 0,
+              y2: 1,
+              colorStops: [{
+                  offset: 0, color: mapType2Feat[type].color // 0% 处的颜色
+              }, {
+                  offset: 1, color: '#fff' // 100% 处的颜色
+              }],
+            }
+          },
+        });
+      });
+      option.series = series;
+      $('.curve-params-wrapper.all-params').show();
+      $('.curve-params-wrapper.single-param').hide();
+    } else {
+      option.series = [{
+        name: mapType2Feat[type].name,
+        type: 'line',
+        stack: '总量',
+        areaStyle: {},
+        data: context[type].data,
+        lineStyle: {
+            color: mapType2Feat[type].color,
+            width: 1
+        },
+        areaStyle: {
+          color: {
+            type: 'linear',
+            x: 0,
+            y: 0,
+            x2: 0,
+            y2: 1,
+            colorStops: [{
+                offset: 0, color: mapType2Feat[type].color // 0% 处的颜色
+            }, {
+                offset: 1, color: '#fff' // 100% 处的颜色
+            }],
+          }
+        },
+      }];
+      $('.curve-param-detail').css('background', mapType2Feat[type].color);
+      ['firstShot', 'total', 'endShot'].forEach(function(id) {
+        $('.curve-param-item#'+id+' .curve-param-detail').text(context[type][id]);
+      });
+    }
+    myChart.setOption(option, true);
   });
 </script>
 {% endblock scripts %}
