--- a/templates/aliwood/pages/history.html
+++ b/templates/aliwood/pages/history.html
@@ -98,3 +98,7 @@
   </div>
 </div>
 {% endblock contents %}
+
+{% block scripts %}
+<script type="text/javascript" src="{% static 'js/player-shadow.js' %}"></script>
+{% endblock scripts %}
