--- a/static/css/history.css
+++ b/static/css/history.css
@@ -2,7 +2,8 @@
   position: relative;
   width: 2.92rem;
   height: 2.86rem;
-  margin-top: 0.4rem;
+  margin-bottom: 0.8rem;
+  margin-right: 0.76rem;
   background: #fff;
   cursor: pointer;
 }
@@ -81,6 +82,13 @@
   height: 0.2rem;
   font-size: 0.2rem;
   color: #fff;
+  z-index: 100;
+}
+
+.item-shadow .item-shadow-delete:hover {
+  width: 0.25rem;
+  height: 0.25rem;
+  font-size: 0.25rem;
 }
 
 .item-shadow .item-shadow-status {
@@ -94,4 +102,14 @@
   height: 100%;
   font-size: 0.4rem;
   color: #fff;
+}
+
+.history .player-shadow {
+  left: 0;
+}
+
+.history {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: left;
 }
