--- a/templates/aliwood/layout/base.html
+++ b/templates/aliwood/layout/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="font-size: 61.46px;">
 
 <head>
 	<title></title>
@@ -13,7 +13,6 @@
 	{% endblock style %}
 	<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 	<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="{% static 'js/base.js' %}"></script>
 	{% block js %}
 	{% endblock js %}
 </head>
